[package]
name = "btc-stream-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
zeromq = "0.3.3"
serde = "1.0"
serde_json = "1.0"
bitcoin = "0.30.0"
dotenv = "0.15.0"
tokio-tungstenite = "0.18.0"
futures-util = "0.3.28"
hex = "0.4.3"
